[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "numpy>=2.4.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
]
